# multicast-video-streaming

./: .gitignore  CLAUDE.md  Client.py  README.md  Server.py  code-review.md  pyproject.toml
docs/: architecture.md  report.md
src/multicast_video/: __init__.py  client.py  config.py  packet.py  server.py  socket_utils.py
tests/: conftest.py  test_client.py  test_packet.py  test_server.py  test_socket_utils.py
