[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "multicast-video"
version = "1.0.0"
description = "UDP multicast MJPEG video streaming – server and client"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
mcast-server = "multicast_video.__main__:server_main"
mcast-client = "multicast_video.__main__:client_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src/multicast_video"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
